<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">pa_ipbook</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="msg_salvar_altera">Salvar alterações</string>
<string name="msg_programa_o_imp">Programação Imperativa</string>
<string name="lbl_next">next</string>
<string name="lbl_autor">Autor:</string>
<string name="lbl_no">no</string>
<string name="msg_nome_um_conto">Nome: Um conto de duas cidades

Autor: Charles Dickens

Ano: 1859

Reserva: 23/11/2022

</string>
<string name="lbl_dan_brown">Dan Brown
</string>
<string name="lbl_17_10_2022">17/10/2022
</string>
<string name="msg_ainda_n_o_tem_n">Ainda não tem nehum livro selecionado</string>
<string name="msg_dmitry_jemerov">Dmitry Jemerov e Svetlana Isakova
</string>
<string name="lbl2">:</string>
<string name="lbl3">.</string>
<string name="msg_android_desen">Android - Desenvolvimento de Aplicações com Android Studio
</string>
<string name="lbl_2003"> 2003
</string>
<string name="lbl_salas_de_estudo">Salas de Estudo</string>
<string name="lbl_reserva2">
Reserva: </string>
<string name="lbl_ricardo_queir_s">Ricardo Queirós
</string>
<string name="msg_fazer_a_sua_res">Fazer a sua reserva</string>
<string name="msg_programa_o_ori">Programação Orientada a Objetos</string>
<string name="msg_livros_recomend">Livros recomendados
 para uma disciplina</string>
<string name="msg_don_quixote_de">Don Quixote de la mancha
</string>
<string name="lbl_1943"> 1943
</string>
<string name="msg_miguel_de_cerva">Miguel de Cervantes
</string>
<string name="msg_kotlin_in_actio">Kotlin in Action
</string>
<string name="msg_adicionar_res">Adicionar à reserva</string>
<string name="lbl_a">
A</string>
<string name="msg_by_signing_up2">By signing up, you agree to Photo\u2019s </string>
<string name="lbl_uma_aventura">Uma Aventura</string>
<string name="msg_uma_aventura_al2">Uma Aventura Alarmante
</string>
<string name="lbl_reserva">Reserva</string>
<string name="lbl_31_10_2022">31/10/2022
</string>
<string name="msg_verificar_sala">Verificar sala de estudo</string>
<string name="lbl_1859"> 1859
</string>
<string name="msg_uma_avemtura_al">Uma Avemtura Alarmante
</string>
<string name="lbl_p_ginas_304">Páginas: 304
</string>
<string name="msg_uma_aventura_al">Uma Aventura Alarmante</string>
<string name="lbl_andr_freitas">André Freitas</string>
<string name="lbl_1612"> 1612
</string>
<string name="lbl_autor2">
Autor: </string>
<string name="lbl_dawn_grifitths">Dawn Grifitths
</string>
<string name="lbl_e_l_james">E. L. james
</string>
<string name="lbl_p_ginas">Páginas: </string>
<string name="msg_nome_kotlin_in">Nome: Kotlin in Action

Autor: Dmitry Jemerov e Svetlana Isakova

Ano: 2017

Páginas: 360

</string>
<string name="msg_j_r_r_tolkie">J. R. R. Tolkien
</string>
<string name="msg_processamento_d">Processamento de linguagens</string>
<string name="lbl_diana">Diana</string>
<string name="msg_selecione_a_dis">Selecione a disciplina</string>
<string name="msg_projeto_aplicad">Projeto Aplicado</string>
<string name="msg_antoine_de_sain">antoine de saint-exupéry
</string>
<string name="msg_nome_cinquenta">Nome: Cinquenta tons de Cinza

Autor: E. L. james

Ano: 2011

Reserva: 17/10/2022

</string>
<string name="msg_nome_o_c_digo">Nome: O Código da Vinci

Autor: Dan Brown

Ano: 2003

Reserva: 08/11/2022

</string>
<string name="lbl_2019"> 2019
</string>
<string name="msg_hist_rico_de_r">Histórico de 
reservas</string>
<string name="lbl_2017"> 2017
</string>
<string name="msg_sala_4_4_lugar">Sala 4 (4 lugares)
Estado: Ocupado</string>
<string name="lbl_2016"> 2016
</string>
<string name="msg_projeto_de_enge">Projeto de Engenharia de Software</string>
<string name="lbl_08_11_2022">08/11/2022
</string>
<string name="lbl_2011"> 2011
</string>
<string name="msg_um_conto_de_dua">Um conto de duas cidades
</string>
<string name="msg_nome_heidi_au">Nome: Heidi

Autor: Johanna Spyri

Ano: 1880

Reserva: 31/10/2022

</string>
<string name="lbl_legi_3_ano">lEGI, 3º ano</string>
<string name="lbl_p_ginas_480">Páginas: 480
</string>
<string name="lbl_p_ginas_360">Páginas: 360
</string>
<string name="msg_sala_1_16_luga">Sala 1 (16 lugares)
Estado: Ocupado</string>
<string name="msg_nome_uma_avemt">Nome: Uma Avemtura Alarmante

Autor: Ana Maria Magalhães e Isabel Alçada

Ano: 1984

Páginas: 184

</string>
<string name="lbl_pdm">PDM</string>
<string name="msg_nova_palavra_pa">Nova palavra-passe</string>
<string name="msg_head_first_kotl">Head First Kotlin: A Brain-Friendly Guide
</string>
<string name="msg_o_c_digo_da_vin">O Código da Vinci
</string>
<string name="msg_ana_maria_magal">Ana Maria Magalhães e Isabel Alçada
</string>
<string name="msg_uma_aventura_de">Uma Aventura debaixo da Terra</string>
<string name="lbl_o_hobbit">O hobbit
</string>
<string name="lbl_15_11_2022">15/11/2022
</string>
<string name="lbl_log_in">log in</string>
<string name="lbl_184">184
</string>
<string name="lbl_johanna_spyri">Johanna Spyri
</string>
<string name="lbl_ano">Ano:</string>
<string name="msg_nome_head_firs">Nome: Head First Kotlin: A Brain-Friendly Guide

Autor: Dawn Grifitths

Ano: 2019

Páginas: 480

</string>
<string name="msg_nome_uma_avent">Nome: Uma Aventura Alarmante

Autor: Ana Maria Magalhães e Isabel Alçada

Ano: 1984

Páginas: 184


</string>
<string name="lbl_sign_up">sign up</string>
<string name="lbl_gerir_dados">Gerir dados</string>
<string name="lbl_novo_nome">Novo nome</string>
<string name="lbl_1984">1984
</string>
<string name="lbl_and"> and 
</string>
<string name="msg_cinquenta_tons">Cinquenta tons de Cinza
</string>
<string name="lbl_privacy_policy">Privacy Policy</string>
<string name="lbl">\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022\u2022</string>
<string name="lbl_registo2">Registo</string>
<string name="msg_nome_o_hobbit">Nome: O hobbit

Autor: J. R. R. Tolkien

Ano: 1937

Reserva: 15/11/2022

</string>
<string name="msg_fazer_uma_reser">Fazer uma reserva</string>
<string name="msg_sala_3_4_lugar">Sala 3 (4 lugares)
Estado: Ocupado</string>
<string name="msg_nome_don_quixo">Nome: Don Quixote de la mancha

Autor: Miguel de Cervantes

Ano: 1612

Reserva: 27/11/2022

</string>
<string name="lbl_log_in2">Log in</string>
<string name="msg_uma_aventura_em">Uma Aventura em Evoramonte</string>
<string name="msg_uma_aventura_em6">Uma Aventura em Macau</string>
<string name="msg_nome_android">Nome: Android - Desenvolvimento de Aplicações com Android Studio

Autor: Ricardo Queirós

Ano: 2016

Páginas: 304

</string>
<string name="msg_uma_aventura_em5">Uma Aventura em Lisboa</string>
<string name="lbl_p_ginas_184">Páginas: 184
</string>
<string name="lbl_27_11_2022">27/11/2022
</string>
<string name="lbl_1937"> 1937
</string>
<string name="msg_o_pequeno_pr_nc">o pequeno príncipe
</string>
<string name="msg_by_signing_up">By signing up, you agree to Photo\u2019s Terms of Service and 
Privacy Policy.</string>
<string name="msg_uma_aventura_em2">Uma Aventura em Conímbriga</string>
<string name="lbl_nome">Nome:</string>
<string name="lbl_19842"> 1984
</string>
<string name="msg_uma_aventura_em4">Uma Aventura em França</string>
<string name="msg_uma_aventura_em3">Uma Aventura em Espanha</string>
<string name="lbl_pro">Pro</string>
<string name="lbl_nome2">Nome: </string>
<string name="lbl_charles_dickens">Charles Dickens
</string>
<string name="lbl_top_3">Top 3:</string>
<string name="msg_terms_of_servic">Terms of Service</string>
<string name="msg_programa_o_de">Programação de dispositivos móveis</string>
<string name="lbl_heidi">Heidi
</string>
<string name="lbl_registo">registo</string>
<string name="msg_a21112_alunos_i">a21112@alunos@ipca.pt</string>
<string name="lbl_1880"> 1880
</string>
<string name="msg_nome_o_pequeno">Nome: o pequeno príncipe

Autor: antoine de saint-exupéry

Ano: 1943

Reserva: 23/11/2022

</string>
<string name="msg_sala_2_4_lugar">Sala 2 (4 lugares)
Estado: Disponivel</string>
<string name="lbl_23_11_2022">23/11/2022
</string>
<string name="msg_please_enter_valid_pa">Please enter valid password</string>
</resources>
