<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearDisciplinaaes"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_1">
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnHome"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_27pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_42pxv"
            android:layout_width="@dimen/_33pxh"
            android:singleLine="true" android:textAllCaps="false" style="@style/btn"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtSelecioneadis"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_49pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@string/msg_selecione_a_dis"
            style="@style/txtRobotoromanregular32" tools:text="@string/msg_selecione_a_dis"/>
        <FrameLayout android:id="@+id/frameStackrectanglethirtyone"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_230pxv"
            android:layout_marginEnd="@dimen/_20pxh"
            android:layout_marginStart="@dimen/_20pxh"
            android:layout_marginTop="@dimen/_46pxv"
            android:layout_width="@dimen/_319pxh" style="@style/groupStylewhite_1">
            <View
                android:background="@drawable/rectangle_bg_white_a700_border_black_900"
                android:id="@+id/viewRectangleThirtyOne"
                android:layout_gravity="start"
                android:layout_height="@dimen/_227pxv"
                android:layout_marginBottom="@dimen/_2pxv" android:layout_width="@dimen/_319pxh"/>
            <TextView android:ellipsize="end"
                android:gravity="top|start"
                android:id="@+id/txtDisciplinaD"
                android:layout_gravity="bottom|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_78pxv"
                android:layout_marginTop="@dimen/_78pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_12pxh"
                android:singleLine="true"
                android:text="@string/msg_programa_o_de"
                style="@style/txtRobotoromanregular15" tools:text="@string/msg_programa_o_de"/>
            <TextView android:ellipsize="end"
                android:gravity="top|start"
                android:id="@+id/txtDisciplanaA"
                android:layout_gravity="top|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_12pxv"
                android:layout_marginTop="@dimen/_12pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_12pxh"
                android:singleLine="true"
                android:text="@string/msg_processamento_d"
                style="@style/txtRobotoromanregular15" tools:text="@string/msg_processamento_d"/>
            <TextView android:ellipsize="end"
                android:gravity="top|start"
                android:id="@+id/txtDisciplinaB"
                android:layout_gravity="top|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_49pxv"
                android:layout_marginTop="@dimen/_49pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_12pxh"
                android:singleLine="true"
                android:text="@string/msg_projeto_aplicad"
                style="@style/txtRobotoromanregular15" tools:text="@string/msg_projeto_aplicad"/>
            <TextView android:ellipsize="end"
                android:gravity="top|start"
                android:id="@+id/txtDisciplinaC"
                android:layout_gravity="top|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_86pxv"
                android:layout_marginTop="@dimen/_86pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_12pxh"
                android:singleLine="true"
                android:text="@string/msg_projeto_de_enge"
                style="@style/txtRobotoromanregular15" tools:text="@string/msg_projeto_de_enge"/>
            <TextView android:ellipsize="end"
                android:gravity="top|start"
                android:id="@+id/txtDisciplinaE"
                android:layout_gravity="bottom|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_40pxv"
                android:layout_marginTop="@dimen/_40pxv"
                android:layout_width="match_parent"
                android:paddingBottom="@dimen/_10pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_12pxh"
                android:singleLine="true"
                android:text="@string/msg_programa_o_imp"
                style="@style/txtRobotoromanregular15" tools:text="@string/msg_programa_o_imp"/>
            <TextView android:ellipsize="end"
                android:gravity="top|start"
                android:id="@+id/txtDisciplinaF"
                android:layout_gravity="bottom|start"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_13pxv"
                android:layout_marginEnd="@dimen/_12pxh"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@string/msg_programa_o_ori"
                style="@style/txtRobotoromanregular15" tools:text="@string/msg_programa_o_ori"/>
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnAvanar"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_64pxh"
            android:layout_marginStart="@dimen/_64pxh"
            android:layout_marginTop="@dimen/_184pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.03"
            android:paddingBottom="@dimen/_23pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_23pxv" android:singleLine="true"
            android:text="@string/lbl_avan_ar"
            android:textAllCaps="false"
            style="@style/btnSolidRoundedOutline_3" tools:text="@string/lbl_avan_ar"/>
    </LinearLayout>
</layout>
